// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SButtonGroup.vue disables shadow based on children disabled status 1`] = `
<div class="button-group button-group--disabled"><button class="button" disabled="disabled">
    <!---->
    <!---->
    Button 1
    <!----></button><button class="button" disabled="disabled">
    <!---->
    <!---->
    Button 2
    <!----></button><button class="button" disabled="disabled">
    <!---->
    <!---->
    Button 3
    <!----></button></div>
`;

exports[`SButtonGroup.vue groups child buttons 1`] = `
<div class="button-group button-group--grouped">
  <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="">
    Button 1
  </sbutton-stub>
  <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="">
    Button 2
  </sbutton-stub>
  <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="">
    Button 3
  </sbutton-stub>
</div>
`;

exports[`SButtonGroup.vue renders child buttons 1`] = `
<div class="button-group">
  <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="">
    Button 1
  </sbutton-stub>
  <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="">
    Button 2
  </sbutton-stub>
  <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="">
    Button 3
  </sbutton-stub>
</div>
`;

exports[`SButtonGroup.vue renders correctly 1`] = `
<div class="button-group">
  <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="">
    Button 1
  </sbutton-stub>
  <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="">
    Button 2
  </sbutton-stub>
  <sbutton-stub color="" shade="" size="" type="" iconleft="" iconright="">
    Button 3
  </sbutton-stub>
</div>
`;
